# rust-notes

./: Cargo.toml
src/ch10/: main.rs
src/ch11/adder/src/: lib.rs
src/ch11/adder/tests/: integration_test.rs
src/ch12/: lib.rs  main.rs
src/ch12/minigrep/src/: lib.rs  main.rs
src/ch13/: main.rs
src/ch14/: Cargo.toml
src/ch14/src/: lib.rs  main.rs
src/ch14/workspaces/: Cargo.toml
src/ch14/workspaces/add_one2/: Cargo.toml
src/ch14/workspaces/adder2/: Cargo.toml
src/ch14/workspaces/adder2/src/: main.rs
src/ch15/src/: main.rs
src/ch16/src/: main.rs
src/ch17/src/: main.rs
src/ch18/src/: main.rs
src/ch2/: main.rs
src/ch4/: main.rs
src/ch5/: main.rs
src/ch6/: main.rs
src/ch7/: main.rs
src/ch7/restaurant/: Cargo.toml
src/ch7/restaurant/src/: bin.rs  front_of_house.rs  lib.rs  sibling.rs
src/ch7/restaurant/src/front_of_house/: hosting.rs
src/ch7/restaurant/src/front_of_house/hosting/: grandchild.rs
src/ch8/: main.rs
src/ch9/: main.rs
