[package]
name = "rust-notes"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "ch3"
path = "src/ch3/main.rs"

[[bin]]
name = "ch4"
path = "src/ch4/main.rs"

[[bin]]
name = "ch5"
path = "src/ch5/main.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8.3"
