[package]
name = "rust-notes"
version = "0.1.0"
edition = "2021"

[workspace]
members = [
    "src/ch7/restaurant",
]

[[bin]]
name = "ch2"
path = "src/ch2/main.rs"

[[bin]]
name = "ch3"
path = "src/ch3/main.rs"

[[bin]]
name = "ch4"
path = "src/ch4/main.rs"

[[bin]]
name = "ch5"
path = "src/ch5/main.rs"

[[bin]]
name = "ch6"
path = "src/ch6/main.rs"

[[bin]]
name = "ch7"
path = "src/ch7/main.rs"

[[bin]]
name = "ch8"
path = "src/ch8/main.rs"

[[bin]]
name = "ch9"
path = "src/ch9/main.rs"

[[bin]]
name = "ch10"
path = "src/ch10/main.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8.3"
