[package]
name = "rust-notes"
version = "0.1.0"
edition = "2021"

[workspace]
members = [
    "src/ch7/restaurant",
    "src/ch11/adder",
    "src/ch12/minigrep",
    "src/ch14",
    "src/ch14/workspaces",
    "src/ch14/workspaces/adder2",
    "src/ch14/workspaces/add_one2",
]

[[bin]]
name = "ch2"
path = "src/ch2/main.rs"

[[bin]]
name = "ch3"
path = "src/ch3/main.rs"

[[bin]]
name = "ch4"
path = "src/ch4/main.rs"

[[bin]]
name = "ch5"
path = "src/ch5/main.rs"

[[bin]]
name = "ch6"
path = "src/ch6/main.rs"

[[bin]]
name = "ch7"
path = "src/ch7/main.rs"

[[bin]]
name = "ch8"
path = "src/ch8/main.rs"

[[bin]]
name = "ch9"
path = "src/ch9/main.rs"

[[bin]]
name = "ch10"
path = "src/ch10/main.rs"

[[bin]]
name = "ch11"
path = "src/ch11/main.rs"

[[bin]]
name = "ch13"
path = "src/ch13/main.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8.3"
